Fix the build script so everyone doesn't need to use java 21

--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,39 @@ processResources {
     filesMatching("fabric.mod.json") {
         expand project.properties
     }
+
+    outputs.upToDateWhen {
+        false
+    }
 }
 
-def targetJavaVersion = 21
+
+// INB4 Moyang changes the versioning scheme
+int indexMajor = minecraft_version.indexOf(".");
+int indexMinor = minecraft_version.indexOf(".", indexMajor + 1);
+int major = Integer.parseInt(minecraft_version.substring(indexMajor + 1, indexMinor))
+int minor = indexMinor < 0 ? 0 : Integer.parseInt(minecraft_version.substring(indexMinor + 1))
+def targetJavaVersion = 8
+if (major == 17) targetJavaVersion 16
+else if (major == 18 || major == 19) targetJavaVersion = 17
+else if (major == 20) {
+    if (minor == 5 || minor == 6)
+        targetJavaVersion = 21
+    else targetJavaVersion = 17
+}
+
+// thanks a lot groovy
+/* switch (major) {
+    case 17 -> 16
+    case 18, 19 -> 17
+    case 20 -> switch(minor) {
+        case 5, 6 -> 21
+        default -> 17
+    }
+    default -> 8
+} */
+
+
 tasks.withType(JavaCompile).configureEach {
     it.options.encoding = "UTF-8"
     if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
